mysql password 변경
mysql 8.0.12 기준 password-validator를 LOW 로 설정해도 기본적으로 8자리를 지켜야하네요

--- a/seba-api-v1/config/config.json
+++ b/seba-api-v1/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "seba",
-    "password": "1234",
+    "password": "seba1234",
     "database": "seba_dev",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -9,7 +9,7 @@
   },
   "test": {
     "username": "seba",
-    "password": "1234",
+    "password": "seba1234",
     "database": "seba_test",
     "host": "127.0.0.1",
     "dialect": "mysql",
