--- a/seba-api-v1/package.json
+++ b/seba-api-v1/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.4",
+    "request": "^2.88.0",
     "sequelize": "^4.41.2"
   }
 }
