--- a/seba-api-v1/package.json
+++ b/seba-api-v1/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -18,6 +18,7 @@
     "sequelize": "^4.41.2"
   },
   "devDependencies": {
+    "nodemon": "^1.18.10",
     "swagger-jsdoc": "^3.2.6",
     "swagger-ui-express": "^4.0.2"
   }
