--- a/seba-api-v1/package.json
+++ b/seba-api-v1/package.json
@@ -11,9 +11,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "request": "^2.88.0",
     "sequelize": "^4.41.2"
   },
